--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,7 +78,7 @@ add_subdirectory( reconstruction/calorimeter/CaloCellBuilder )
 add_subdirectory( reconstruction/calorimeter/CaloClusterBuilder )
 add_subdirectory( reconstruction/calorimeter/CaloRingsBuilder )
 add_subdirectory( reconstruction/io/RootStreamBuilder )
-add_subdirectory( physics/egamma/CaloCutBasedHypo )
+add_subdirectory( reconstruction/physics/EgammaBuilder )
 
 # detector definitions
 add_subdirectory( geometry/ATLAS )
@@ -108,7 +108,7 @@ add_library(lorenzetti SHARED
   $<TARGET_OBJECTS:CaloClusterBuilder>
   $<TARGET_OBJECTS:CaloRingsBuilder>
   $<TARGET_OBJECTS:RootStreamBuilder>
-  $<TARGET_OBJECTS:CaloCutBasedHypo>
+  $<TARGET_OBJECTS:EgammaBuilder>
   $<TARGET_OBJECTS:GenKernel>
   $<TARGET_OBJECTS:filters>
   $<TARGET_OBJECTS:evtgen>
