--- a/events/CaloRings/CMakeLists.txt
+++ b/events/CaloRings/CMakeLists.txt
@@ -7,6 +7,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../core/GaugiKernel)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../core/G4Kernel)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../CaloCell)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../CaloCluster)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../EventInfo)
 
 ROOT_GENERATE_DICTIONARY(CaloRingsDict ${HEADERS} LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/src/LinkDef.h  MODULE CaloRings)
                                       
