--- a/events/EventInfo/CMakeLists.txt
+++ b/events/EventInfo/CMakeLists.txt
@@ -5,7 +5,7 @@ file(GLOB_RECURSE HEADERS EventInfo/*.h)
 include_directories(${CMAKE_SOURCE_DIR} ${ROOT_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../core/GaugiKernel)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../CaloCell)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../CaloCluster)
+#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../CaloCluster)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../Truth)
 
 ROOT_GENERATE_DICTIONARY(EventInfoDict ${HEADERS} LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/src/LinkDef.h  MODULE EventInfo)
