--- a/reconstruction/calorimeter/CaloRingsBuilder/CMakeLists.txt
+++ b/reconstruction/calorimeter/CaloRingsBuilder/CMakeLists.txt
@@ -1,11 +1,13 @@
 
 file(GLOB SOURCES src/*.cxx)
-file(GLOB_RECURSE HEADERS src/CaloRingsBuilder.h )
+file(GLOB_RECURSE HEADERS src/CaloRingsMaker.h )
+file(GLOB_RECURSE LINKDEF src/CaloRingsMerge.h )
 
 include_directories(${CMAKE_SOURCE_DIR} ${ROOT_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../events/CaloCluster)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../events/CaloCell)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../events/CaloRings)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../events/EventInfo)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../core/GaugiKernel)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../core/G4Kernel)
 
