--- a/reconstruction/io/RootStreamBuilder/CMakeLists.txt
+++ b/reconstruction/io/RootStreamBuilder/CMakeLists.txt
@@ -3,7 +3,7 @@ file(GLOB SOURCES src/*.cxx)
 file(GLOB_RECURSE HEADERS src/RootStreamMaker.h )
 
 include_directories(${CMAKE_SOURCE_DIR} ${ROOT_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../events/Particle)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../events/Egamma)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../events/CaloCluster)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../events/CaloCell)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../events/CaloHit)
