--- a/reconstruction/physics/EgammaBuilder/CMakeLists.txt
+++ b/reconstruction/physics/EgammaBuilder/CMakeLists.txt
@@ -4,10 +4,12 @@ file(GLOB_RECURSE HEADERS src/ElectronMaker.h )
 #file(GLOB_RECURSE HEADERS src/PhotonMaker.h )
 
 include_directories(${CMAKE_SOURCE_DIR} ${ROOT_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../events/Particle)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../events/Egamma)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../events/CaloCluster)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../events/CaloCell)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../events/CaloRings)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../events/EventInfo)
+
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../core/GaugiKernel)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../core/G4Kernel)
 
