Cleansup docker/docker-compose.yml

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,22 +1,6 @@
 name: lorenzetti
 services:
-  # dev-lorenzetti:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile.dev
-  #   image: ${USERNAME}/lorenzetti:${OLD_TAG}
-  #   container_name: lorenzetti-${OLD_TAG}-container
-  #   # volumes:
-  #   #   - /home/${USERNAME}/data:/root/data
-  #   #   - /mnt/d/data:/root/ext_data
-  #   #   - /home/${USERNAME}/workspaces/lorenzetti:/root/workspaces/lorenzetti
-  #   #   - /home/${USERNAME}/logs:/root/logs
-  #   tty: true
-  #   # environment:
-  #   # - LZT_DATA=${LZT_DATA}
-  #   # - LZT_REPO=${LZT_REPO}
-  #   # # - PYTHONPATH=${PYTHONPATH}
-  lorenzetti:
+  lorenzetti-base:
     build:
       context: ..
       dockerfile: docker/Dockerfile
@@ -26,6 +10,6 @@ services:
         - FASTJET_VERSION=3.4.0
         - HEPMC_VERSION=3.3.0
         - ROOT_VERSION=6.34.00-ubuntu24.10
-    image: ${USERNAME}/lorenzetti:${TAG}
-    container_name: lorenzetti-container
+    image: ${USERNAME}/lorenzetti:base
+    container_name: lorenzetti-base-container
     tty: true
