--- a/generator/evtgen/CMakeLists.txt
+++ b/generator/evtgen/CMakeLists.txt
@@ -23,6 +23,7 @@ install(FILES ${HEADERS}  DESTINATION evtgen)
 
 
 gaugi_install_python_modules( ${CMAKE_CURRENT_SOURCE_DIR}/python evtgen)
+gaugi_install_data_modules( ${CMAKE_CURRENT_SOURCE_DIR}/data evtgen)
 
 
 
