--- a/generator/filters/CMakeLists.txt
+++ b/generator/filters/CMakeLists.txt
@@ -27,6 +27,7 @@ install(FILES ${HEADERS}  DESTINATION filters)
 
 
 gaugi_install_python_modules( ${CMAKE_CURRENT_SOURCE_DIR}/python filters)
+gaugi_install_scripts_modules( ${CMAKE_CURRENT_SOURCE_DIR}/scripts filters)
 
 
 
