--- a/geometry/ATLAS/CMakeLists.txt
+++ b/geometry/ATLAS/CMakeLists.txt
@@ -1,5 +1,7 @@
 
 gaugi_install_python_modules( ${CMAKE_CURRENT_SOURCE_DIR}/python ATLAS)
+gaugi_install_data_modules( ${CMAKE_CURRENT_SOURCE_DIR}/data ATLAS)
+gaugi_install_scripts_modules( ${CMAKE_CURRENT_SOURCE_DIR}/scripts ATLAS)
 
 
 
