--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -1,137 +1,14 @@
-anyio==4.8.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==3.0.0
-async-lru==2.0.4
-atlas-mpl-style==0.24.1
-attrs==25.1.0
-babel==2.17.0
-beautifulsoup4==4.13.3
-bleach==6.2.0
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-colorama==0.4.6
-comm==0.2.2
-contourpy==1.3.1
-cryptography==44.0.1
-cycler==0.12.1
-debugpy==1.8.12
-decorator==5.1.1
-defusedxml==0.7.1
-docutils==0.21.2
-executing==2.2.0
-expand_folders==1.0.0
-fastjsonschema==2.21.1
-fonttools==4.56.0
-fqdn==1.5.1
-h11==0.14.0
-httpcore==1.0.7
-httpx==0.28.1
-id==1.5.0
-idna==3.10
-importlib_resources==6.5.2
-ipykernel==6.29.5
-ipython==8.32.0
-isoduration==20.11.0
-jaraco.classes==3.4.0
-jaraco.context==6.0.1
-jaraco.functools==4.1.0
-jedi==0.19.2
-jeepney==0.8.0
-Jinja2==3.1.5
-joblib==1.4.2
-json5==0.10.0
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter-events==0.12.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyter_server==2.15.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.3.5
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-keyring==25.6.0
-kiwisolver==1.4.8
-loguru==0.7.3
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.10.0
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mistune==3.1.1
-more-itertools==10.6.0
-mplhep==0.3.56
-mplhep_data==0.0.4
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
-nh3==0.2.20
-notebook_shim==0.2.4
-numexpr==2.10.2
-numpy==2.2.3
-overrides==7.7.0
-packaging==24.2
-pandas==2.2.3
-pandocfilters==1.5.1
-parso==0.8.4
-pexpect==4.9.0
-pillow==11.1.0
-platformdirs==4.3.6
-prettytable==3.14.0
-prometheus_client==0.21.1
-prompt_toolkit==3.0.50
-psutil==7.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pycparser==2.22
-Pygments==2.19.1
-pyhepmc==2.14.0
-pyparsing==3.2.1
-python-dateutil==2.9.0.post0
-python-json-logger==3.2.1
-pytz==2025.1
-PyYAML==6.0.2
-pyzmq==26.2.1
-readme_renderer==44.0
-referencing==0.36.2
-requests==2.32.3
-requests-toolbelt==1.0.0
-rfc3339-validator==0.1.4
-rfc3986==2.0.0
-rfc3986-validator==0.1.1
-rich==13.9.4
-rich-argparse==1.7.0
-rpds-py==0.22.3
-scikit-learn==1.6.1
-scipy==1.15.1
-seaborn==0.13.2
-SecretStorage==3.3.3
-Send2Trash==1.8.3
-setuptools==75.8.0
-six==1.17.0
-sniffio==1.3.1
-soupsieve==2.6
-stack-data==0.6.3
-terminado==0.18.1
-threadpoolctl==3.5.0
-tinycss2==1.4.0
-tornado==6.4.2
-tqdm==4.67.1
-traitlets==5.14.3
-twine==6.1.0
-types-python-dateutil==2.9.0.20241206
-typing_extensions==4.12.2
-tzdata==2025.1
-uhi==0.5.0
-uri-template==1.3.0
-urllib3==2.3.0
-wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
+setuptools 
+numpy
+pandas 
+scikit-learn
+seaborn 
+jupyterlab 
+tqdm 
+atlas-mpl-style 
+twine 
+pyhepmc 
+prettytable
+expand_folders
+rich_argparse
+loguru
